--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
 </div>
 
 <div>
-	<img src=http://postimg.org/image/rhh6ehyep/ alt="inauguration">
+	<a img src=http://postimg.org/image/rhh6ehyep/ alt="inauguration">
+	</a>
 </div
