--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 </div>
 
 <div>
-	<a img src=http://postimg.org/image/rhh6ehyep/ alt="inauguration">
+	<a><img src=http://postimg.org/image/rhh6ehyep/ alt="inauguration">
 	</a>
-</div
+</div>
