--- a/index.html
+++ b/index.html
@@ -24,6 +24,5 @@
 </div>
 
 <div>
-	<a><img src=http://postimg.org/image/rhh6ehyep/ alt="inauguration">
-	</a>
+	<img src="http://s8.postimg.org/4srzexh11/inauguration.jpg" alt="inauguration">
 </div>
