--- a/index.html
+++ b/index.html
@@ -1,28 +1,62 @@
-<p>my first  web page </p>
-<h2> cyndy </h2>
+<html>
+  <head>
+  	<style>
+  	h1{color:#9188A9;
+  		background-color:#EBD6FF;
+  		height: 40px;
+  		/*border: 5px solid blue;*/
+  		padding: 10px;
+  		margin: 20px;
+  		text-align:center;}
+  	h2{color:#660066;}
+  	h1 {font-size: 40px;}
+  	.subheading{color:#944D94;
+  		font-size: 30px}
+  	.bio{color:#990099;}
+  	footer{height: 200px;
+  		padding-top: 40px;
+  		background-color: #F3E6FF;
+  		margin-top: 48px;
+  		text-align: center;}
+  	.read{color: #B82E8A;
+  		/*background-color: #DC96C4;*/
+  		font-size: 20px;
+  		height:10px;
+  		margin-left:600px;}
+ 
 
-<p>SoCalCyn, life explorer</P>
-<p>Southern California born and raised, on a softball field is where I spent most of my days. I left Fontana for LA, then DC, and now Chicago. </p>
+  	</style>
+   <body>
+   	<p>my first  web page </p>
+   	<h1> cyndy hernandez </h1>
 
-<h1>things i read<h1>
+   	<p class="subheading">SoCalCyn, life explorer</P>
+   	<p class= "bio">Southern California born and raised, on a softball field is where I spent most of my days. I left Fontana for LA, then DC, and now Chicago. </p>
 
-<a href="http://google.com">Google</a>
-<div>
-	<a href="http://politico.com"> Politico </a>
-</div>
-<div> 
-	<a href="http://theatlantic.com">The Atlantic</a>
+   	<h1>things i read</h1>
 
-</div>
-<div>
-	<a href="http://newyorker.com">The New Yorker</a>
-</div>
-<div>
-<a href="http://usctrojans.com">
-<img src="http://grfx.cstv.com/story-nav/logos/usc.png" alt="usctrojans">
-</a>
-</div>
-
-<div>
-	<img src="http://s8.postimg.org/4srzexh11/inauguration.jpg" alt="inauguration">
-</div>
+   	<!-- <a href="http://google.com">Google</a> -->
+   	<div>
+   		<a class="read"href="http://politico.com"> Politico </a>
+   	</div>
+   	<div> 
+   		<a class="read"href="http://theatlantic.com">The Atlantic</a>
+   	</div>
+   	<div>
+   		<a class="read"href="http://newyorker.com">The New Yorker</a>
+   	</div>
+   	<div>
+   	<a href="http://usctrojans.com">
+   	<img src="http://grfx.cstv.com/story-nav/logos/usc.png" alt="usctrojans">
+   	</a>
+   	</div>
+   	<div>
+   		<img src="http://s8.postimg.org/4srzexh11/inauguration.jpg" alt="inauguration">
+   	</div>
+   		<footer>
+			<h2>Tweet me...</h2> <a href="http://twitter.com/SoCalCyn">...here</a>
+ 			<h2> or email me... </h2> <a href="mailto:cyndyher@gmail.com"> ...here </a>
+   		</footer>
+   </body>
+  </head>
+</html>
